browser/scss/contact.scss
/*Contact Page
========================*/

$header-height: 65px;
$footer-height: 40px;

/*Colors
========================*/
$lightBlue: #37BEFF;
$aqua: #7FFFD4;
$cyan: #E0FFFF;
$cream: #F5FFFA;

/*Page Styles
========================*/

#contact {
	background-image: url('bgnoise.jpg');
	background-size: cover;
	height: calc(100vh - $footer-height);

	// background-image: url('vaporwave-landscape.jpg');
	// background-image: url("steve-pic-2.jpg");
	// background-repeat: no-repeat;
	// background-size: 100%;
	// background-position: 30%;

	#resume-container {
		display: none;
		// display: block;
		z-index: 2;
		height: 100%;
		position: relative;
		width: 36%;
		margin: auto;
		text-align: center;
		opacity: 1;
		animation: fadein .5s;

		#image-wrapper {
			img {
				margin-bottom: 1%;
				opacity: 1;
				width: 100%;
				// width: 50vw;
				// height: 80vh;
			}

			#download-button {
				position: absolute;
				margin-top: 600px;
				top: 0;
				left: 0;
				width: 40%;
				margin-left: 30%;

				background-color: $aqua;
				font-size: 14px;
				color: dimgray;
				border: solid dimgray 2px;
				border-radius: 10px;
				padding: 10px 7px;
				transition: all 0.25s ease-in-out;
				p {
					margin: 5px;
				}
				&:hover {
					color: $cream;
				}
			}
		}

	}
	#overlay {
		position: absolute;
		top: 0;
		height: 100%;
		width: 100%;
		// background: rgba(20,20,20,.75);
		background-color: black;
		opacity: 0;
		// display: none;
		z-index: -1;
		transition: opacity .25s ease-in-out;
	}

	#left-col{
		z-index: 4;
		height: 80vh;
		width: 30%;
		float: left;
		margin-left: -23%;
		margin-top: -1.2%;
		display: flex;
		align-items: center;

		#arrow {
			color: dimgray;
			z-index: -1;
			font-size: 3em;
			align-self: center;
			animation: pulsate 1s ease-out;
			animation-iteration-count: infinite;
		}
		.invisible {
			display: none;
		}
		canvas{
			position:absolute;
			left: 0;
			top:0;
			display: none;
			z-index:0;
		}
	}

	.card-container {
		z-index: 1;
		margin-right: 10px;
		img {
			border-radius: 15px;
			width: 135%;
			transition: transform .5s ease-in-out;
		}
	}

	#main-content {
		z-index: 5;
		text-align: center;
		margin: auto;
		margin-top: 40px;
		margin-bottom: 90px;
		width: 40%;

		.social {
			display: flex;
			height: 100%;
			margin-bottom: 30px;
			margin-top: 50px;

			a {
				flex-grow: 1;
			}
		}

		i {
			height: 50px;
			width: 50px;
		}

		h1, h2 {
			margin-top: 0px;
		}

		a {
			font-size: 30px;
		}

		#github, #google, #linkedin, #resume, #email {
			transition: all 0.25s ease-in-out;
			&:hover {
				color: $aqua;
			}
		}

		#resume {
			cursor: pointer;
		}

		#form-container {
			background-image: url('bgnoise.jpg');

			// background-color: $cream;
			text-align: center;
			margin: auto;
			border-radius: 10px;
			padding: 20px;
			box-shadow: 0px 2px 10px black;

			h2 {
				margin-top: 10px;
				margin-bottom: 30px;
			}

			form {
				margin: auto;
				width: 90%;
			}

			input, textarea {
				padding-left: 50px;
				font-size: 14px;
				font-weight: 400;
				background-color: #fbfbfb;
				&:focus {
					outline: none;
					border: solid 2px dimgray;
				}
			}

			input {
				margin-bottom: 15px;
				height: 50px;
				width: 100%;
			}

			textarea {
				width: 100%;
				height: 150px;
				padding-top: 12px;
				padding-top: 12px;
				max-width: 100%;
				min-width: 100%;
			}
			.button-holder {
				margin-top: 10px;

				&:hover{
					color: $aqua;
				}
			}

			#slide-button{
				float:left;
				width: 100%;
				border: dimgray solid 1px;
				cursor:pointer;
				background-color: #fbfbfb;
				font-size:20px;
				padding-top:0px;
				padding-bottom:0px;
				transition: all 0.3s;

				p {
					color:dimgray;
					margin-top: 22px;
					margin-bottom: 22px;
					padding: 0;
				}

				#waiting {
					height: 100%;
					padding-top: 8px;
					padding-bottom: 8px;

					img {
						height: 50px;
						padding-top: 2px;
					}
				}

				&:hover{
					background-color: rgba(0,0,0,0);
					color: #fbfbfb;
				}

				&:focus {
					border: dimgray solid 2px;
					outline: none;
				}
			}

			.ease {
				width: 0px;
				height: 72px;
				background-color: $aqua;
				transition: .3s ease;
				border: dimgray solid 2px;
			}

			.button-holder:hover .ease{
			  width:100%;
			  background-color:$aqua;
			}

			/* Icons ---------------------------------- */
			#nameField{
				background-image: url(http://rexkirby.com/kirbyandson/images/name.svg);
				background-size: 30px 30px;
				background-position: 11px 8px;
				background-repeat: no-repeat;
			}

			#emailField{
				background-image: url(http://rexkirby.com/kirbyandson/images/email.svg);
				background-size: 30px 30px;
				background-position: 11px 8px;
				background-repeat: no-repeat;
			}

			#messageField{
				background-image: url(http://rexkirby.com/kirbyandson/images/comment.svg);
				background-size: 30px 30px;
				background-position: 11px 8px;
				background-repeat: no-repeat;
			}
		}

		#thank-you {
			margin-top: 100px;
			min-height: 250px;
			padding: 10px;
			border-radius: 10px;
			// box-shadow: 0px 2px 10px black;
			animation: fadein 1s;

			a, p {
				font-size: 16px;
			}
			a {
				font-weight: bold;
			}

			button {
				border: solid dimgray 2px;
				margin-top: 100px;
				background-color: transparent;
				border-radius: 10px;
				width: 60%;
				min-height: 40px;
				transition: all 0.25s ease-in-out;
				&:hover {
					background-color: $cream;
				}
			}
		}
	}
}

@keyframes fadein {
from { opacity: 0; }
to   { opacity: 1; }
}

// .hidden {
// 	transform:opacity(0%);
// }
// .initial {
// 	transform:translate(-150%);
// }
// .visible {
// 	transform:opacity(100%);
// }

/*Media Queries
=============================*/
@media (min-width: 769px) and (max-width: 1024px) {
	body {
		// overflow: auto;
		overflow-y: scroll;
		-webkit-overflow-scrolling: touch;
	}
	#main-content {
		width: 90% !important;
	}

	#contact #resume-container {
		width: 50%;
		#image-wrapper #download-button {
			margin-top: 550px;
			width: 50%;
			margin-left: 25%;
		}
	}
}

@media (max-width: 768px){
	body {
		// overflow: auto;
		overflow-y: scroll;
		-webkit-overflow-scrolling: touch;
	}
	#main-content {
		height: 100%;
		width: 90% !important;
		// min-height: 70vh;
	}
	#left-col, #left-col p, #left-col .card-container {
		display: none !important;
	}

	#contact #resume-container {
		width: 100%;
	}

	#contact #resume-container #image-wrapper {
		position: absolute;
		// top: -200px;
		// top: 0;
		left: 0;
		margin-left: auto;
		margin-right: auto;
		width: 100%;

		img {
			// margin-left: -75%;
			width: 90%;
		}
		#download-button {
			position: absolute;
			margin-top: 480px;
			top: 0;
			left: 0;
			width: 80%;
			margin-left: 10%;
			font-size: 24px;
			padding-top: 1em;
			padding-bottom: 1em;

			p {
				display: none;
			}
		}
	}
}


// /* Firefox < 16 */
// @-moz-keyframes fadein {
// from { opacity: 0; }
// to   { opacity: 1; }
// }
//
// /* Safari, Chrome and Opera > 12.1 */
// @-webkit-keyframes fadein {
// from { opacity: 0; }
// to   { opacity: 1; }
// }
//
// /* Internet Explorer */
// @-ms-keyframes fadein {
// from { opacity: 0; }
// to   { opacity: 1; }
// }
//
// /* Opera < 12.1 */
// @-o-keyframes fadein {
// from { opacity: 0; }
// to   { opacity: 1; }
// }

